# SynthWave-3D

./: CMakeLists.txt  README.md
include/: obj.hpp  render.hpp  vec3.hpp
src/: main.cpp  render.cpp
